test/run_pass/hello.pine
# output:hello
extern def print_string : string -> unit

def main do
  let _ = print_string("hello") in
  0
end
